# sga-ai-assist

./: .env.example  .gitignore  Dockerfile  README.md  pyproject.toml  requirements.txt
prompts/: context.md  context_v2.md  slm_context.md
sga_ai_assist/: __init__.py  api.py  cli.py  config.py  pipeline.py  slm.py
sga_ai_copilot/: .env.example  README.md  __init__.py  cli.py  config.py  llm.py  pyproject.toml  requirements.txt  slm.py  transcriber.py
