[project]
name = "sga-ai-assist"
version = "0.1.0"
description = "Local WhisperX speech-to-text and diarization service."
requires-python = ">=3.10,<3.12"
dependencies = [
  "fastapi>=0.111,<1",
  "python-dotenv>=1,<2",
  "python-multipart>=0.0.9,<1",
  "uvicorn[standard]>=0.30,<1",
  "whisperx>=3.4,<4",
]

[project.scripts]
sga-transcribe = "sga_ai_assist.cli:main"

[tool.ruff]
line-length = 88
target-version = "py310"

